update the year

--- a/Assesment1_Natnael_Endale_Section4/index.html
+++ b/Assesment1_Natnael_Endale_Section4/index.html
@@ -92,7 +92,8 @@
     </main>  
 
     <footer>  
-        <p>&copy; 2023 Your Company Name. All rights reserved.</p>  
+        <p>&copy; 2025 Natnael-Endale. All rights reserved.</p>  
     </footer>  
 </body>  
+
 </html> 
