--- a/Assesment1_Natnael_Endale_Section4/index.html
+++ b/Assesment1_Natnael_Endale_Section4/index.html
@@ -23,21 +23,21 @@
         <h2>Section 1</h2> 
         <section class="product-list" id="section1">  
             <article class="product">  
-                <img src="/assets/static/images/image1.jpg" alt="Product 1">  
+                <img src="/assets/static/images/image1.jpg" alt="First Product">  
                 <h2>Product Title 1</h2>  
                 <p>Description of product 1. This product is awesome and you should buy it!</p>  
                 <p class="price">$49.99</p>  
             </article>  
 
             <article class="product">  
-                <img src="/assets/static/images/image2.jpg" alt="Product 2">  
+                <img src="/assets/static/images/image2.jpg" alt="Second Product">  
                 <h2>Product Title 2</h2>  
                 <p>Description of product 2. This product is even better!</p>  
                 <p class="price">$89.99</p>  
             </article>  
 
             <article class="product">  
-                <img src="/assets/static/images/image3.jpg" alt="Product 3">  
+                <img src="/assets/static/images/image3.jpg" alt="Third Product">  
                 <h2>Product Title 4</h2>  
                 <p>Description of product 4. Don't miss this great deal!</p>  
                 <p class="price">$69.99</p>  
@@ -97,4 +97,5 @@
 </body>  
 
 </html> 
+
 
