--- a/Assesment1_Natnael_Endale_Section4/index.html
+++ b/Assesment1_Natnael_Endale_Section4/index.html
@@ -46,21 +46,21 @@
         <h2>Section 2</h2> 
         <section class="product-list" id="section2">  
             <article class="product">  
-                <img src="/assets/static/images/image4.jpg" alt="Product 1">  
+                <img src="/assets/static/images/image4.jpg" alt="First Product">  
                 <h2>Product Title 5</h2>  
                 <p>Description of product 5. This product is awesome and you should buy it!</p>  
                 <p class="price">$49.99</p>  
             </article>  
 
             <article class="product">  
-                <img src="/assets/static/images/image5.jpg" alt="Product 2">  
+                <img src="/assets/static/images/image5.jpg" alt="Second Product">  
                 <h2>Product Title 6</h2>  
                 <p>Description of product 6. This product is even better!</p>  
                 <p class="price">$99.99</p>  
             </article>  
 
             <article class="product">  
-                <img src="/assets/static/images/image6.jpg" alt="Product 3">  
+                <img src="/assets/static/images/image6.jpg" alt="Third Product">  
                 <h2>Product Title 6</h2>  
                 <p>Description of product 6. Don't miss this great deal!</p>  
                 <p class="price">$59.99</p>  
@@ -69,7 +69,7 @@
         <h2>Section 3</h2> 
         <section class="product-list" id="section3">  
             <article class="product">  
-                <img src="/assets/static/images/image7.jpg" alt="Product 1">  
+                <img src="/assets/static/images/image7.jpg" alt="First Product">  
                 <h2>Product Title 7</h2>  
                 <p>Description of product 7. This product is awesome and you should buy it!</p>  
                 <p class="price">$9.99</p>  
@@ -97,5 +97,6 @@
 </body>  
 
 </html> 
+
 
 
